<resources>
    <string name="app_name">My Doctor</string>
    <string name="get_started_desc">Konsultasi dengan dokter jadi lebih mudah &amp; fleksible</string>
    <string name="btn_get_started">Get Started</string>
    <string name="btn_sign_in">Sign In</string>

    <string name="sign_in_desc">Masuk dan mulai \nberkonsultasi</string>
    <string name="text_email_address">Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_forgot_password"><u>Forgot My Password</u></string>
    <string name="text_sign_up"><u>Create New Account</u></string>

    <string name="sign_up">Daftar Akun</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_job">Job</string>
    <string name="btn_continue">Continue</string>

    <string name="upload_photo">Upload Photo</string>
    <string name="upload_continue">Upload and Continue</string>
    <string name="skip"><u>Skip for this</u></string>

    <!-- Bottom navigation -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_navigation">HomeNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_hospitals">Hospitals</string>
    <string name="title_messages">Messages</string>

    <!-- Doctor navigation -->
    <string name="doctor_page">Mau konsultasi dengan \nsiapa hari ini ?</string>
    <string name="title_top_rated_doctor">Top Rated Doctors</string>
    <string name="title_good_news">Good News</string>
    <string name="title_doctor_specialist">Saya butuh \n<b>doctor...</b></string>
    <string name="title_news">this is a title for good news and soon will be</string>
    <string name="date_news">date news</string>
    <string name="list_doctor_specialist">Chose Yours ....</string>

    <!-- Detail Doctor   -->
    <string name="doctor_name">Doctor name</string>
    <string name="doctor_gender">Doctor gender</string>
    <string name="doctor_specialist">Specialist</string>
    <string name="doctor_alumnus">Alumnus</string>
    <string name="work_place">Tempat Praktik</string>
    <string name="no_str">No. STR</string>
    <string name="btn_consultation">Start Consultation</string>


    <!-- profile section    -->
    <string name="text_profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="last_update">Last updated yesterday</string>
    <string name="language">Language</string>
    <string name="avail_language">Available 12 Language</string>
    <string name="rate">Give Us Rate</string>
    <string name="rate_dec">On Google Play Store</string>
    <string name="help">Help Center</string>
    <string name="help_desc">Read our guidelines</string>
    <string name="save_edit">Save Profile</string>

    <!-- Messages section -->
    <string name="last_messages">last messages</string>


    <!-- Hospitals Navigation -->
    <string name="hospital_page">Nearby Hospitals</string>
    <string name="available_hospitals">available</string>


</resources>