<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.homeNavigation.home.DoctorProfile">

    <ImageView
        android:id="@+id/backNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/text_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_profile" />

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nunito_600"
        android:text="@string/text_profile"
        android:textAlignment="center"
        android:textColor="@color/black_custom"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="162dp" />

    <ImageView
        android:id="@+id/doctor_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_upload_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_profile" />

    <TextView
        android:id="@+id/doctor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_600"
        android:textColor="@color/black_custom"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doctor_image"
        tools:text="@string/doctor_name" />

    <TextView
        android:id="@+id/doctor_specialist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/nunito_400"
        android:textColor="@color/gray_custom"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doctor_name"
        tools:text="@string/doctor_specialist" />

    <TextView
        android:id="@+id/title_alumnus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/nunito_400"
        android:textSize="14sp"
        android:textColor="@color/gray_custom"
        android:text="@string/doctor_alumnus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/doctor_specialist" />

    <TextView
        android:id="@+id/doctor_alumnus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/nunito_400"
        android:textSize="14sp"
        android:textColor="@color/black_custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_alumnus"
        tools:text="@string/doctor_alumnus" />

    <View
        android:id="@+id/sparator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/doctor_alumnus"
        android:background="@color/gray_custom_light"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/title_work_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_400"
        android:textSize="14sp"
        android:textColor="@color/gray_custom"
        android:text="@string/work_place"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sparator1" />

    <TextView
        android:id="@+id/doctor_work_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/nunito_400"
        android:textSize="14sp"
        android:textColor="@color/black_custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_work_place"
        tools:text="@string/doctor_alumnus" />

    <View
        android:id="@+id/sparator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/doctor_work_place"
        android:background="@color/gray_custom_light"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/title_no_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunito_400"
        android:textSize="14sp"
        android:textColor="@color/gray_custom"
        android:text="@string/no_str"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sparator2" />

    <TextView
        android:id="@+id/doctor_no_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/nunito_400"
        android:textSize="14sp"
        android:textColor="@color/black_custom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_no_str"
        tools:text="@string/doctor_alumnus" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_consultation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/nunito_600"
        android:text="@string/btn_consultation"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/doctor_no_str" />






</androidx.constraintlayout.widget.ConstraintLayout>