<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_hospitals"
        android:name="com.example.mydoctor.ui.homeNavigation.hospitals.HospitalsFragment"

        android:label="@string/title_hospitals"
        tools:layout="@layout/fragment_hospitals" />

    <fragment
        android:id="@+id/navigation_home"
        android:label="@string/title_home"
        android:name="com.example.mydoctor.ui.homeNavigation.home.HomeFragment"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_doctor_to_profile"
            app:destination="@id/profile" />
        <action
            android:id="@+id/action_navigation_doctor_to_listDoctorFragment"
            app:destination="@id/listDoctorFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.mydoctor.ui.homeNavigation.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/profile"
        android:name="com.example.mydoctor.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.mydoctor.ui.profile.editProfile.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" />
    <fragment
        android:id="@+id/listDoctorFragment"
        android:name="com.example.mydoctor.ui.homeNavigation.home.ListDoctorFragment"
        android:label="fragment_list_doctor"
        tools:layout="@layout/fragment_list_doctor" >
        <action
            android:id="@+id/action_listDoctorFragment_to_doctorProfile"
            app:destination="@id/doctorProfile" />
    </fragment>
    <fragment
        android:id="@+id/doctorProfile"
        android:name="com.example.mydoctor.ui.homeNavigation.home.DoctorProfile"
        android:label="fragment_doctor_profile"
        tools:layout="@layout/fragment_doctor_profile" />
</navigation>