<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.signUp.SignUpFragment">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/title_signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_signUp" />

    <TextView
        android:id="@+id/title_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nunito_600"
        android:text="@string/sign_up"
        android:textColor="@color/black_custom"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/nunito_400"
        android:text="@string/text_full_name"
        android:textColor="@color/gray_custom"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_signUp" />

    <EditText
        android:id="@+id/input_full_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_400"
        android:textColor="@color/black_custom"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/button_shape_stroke"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_full_name" />

    <TextView
        android:id="@+id/text_job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_400"
        android:text="@string/text_job"
        android:textColor="@color/gray_custom"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_full_name" />

    <EditText
        android:id="@+id/input_job"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_400"
        android:textColor="@color/black_custom"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/button_shape_stroke"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_job" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_400"
        android:text="@string/text_email_address"
        android:textColor="@color/gray_custom"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_job" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="6dp"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_400"
        android:textColor="@color/black_custom"
        android:paddingHorizontal="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/button_shape_stroke"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_email" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_400"
        android:text="@string/text_password"
        android:textColor="@color/gray_custom"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="6dp"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_400"
        android:textColor="@color/black_custom"
        android:paddingHorizontal="10dp"
        android:inputType="textPassword"
        android:background="@drawable/button_shape_stroke"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/blue_custom"
        android:fontFamily="@font/nunito_600"
        android:text="@string/btn_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/input_password" />


</androidx.constraintlayout.widget.ConstraintLayout>